# openapply

./: .gitignore  pyproject.toml
.github/workflows/: discover.yml  scrape.yml
data/slugs/: ashby.txt  cc_latest.json  greenhouse.txt  lever.txt  provenance.json  simplify_companies.json  simplify_latest.json  smartrecruiters.txt
openapply/: __init__.py  db.py  discover.py  normalize.py  scrape.py  simplify.py  update.py  validate.py
openapply/scrapers/: __init__.py  ashby.py  base.py  greenhouse.py  lever.py  smartrecruiters.py
tests/: test_discover.py  test_normalize.py  test_scrapers.py
tests/fixtures/: ashby_ramp.json  ashby_ramp_rest.json  greenhouse_discord.json  lever_15five.json  smartrecruiters_visa_detail.json  smartrecruiters_visa_list.json
